# mailbox

./: README.md  docker-compose.yml  package.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analytics.py  categories.py  emails.py  preferences.py  summaries.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  analyzed_content.py  category.py  daily_summary.py  email.py  user_preference.py
backend/app/schemas/: analyzed_content.py  category.py  email.py  preference.py  summary.py
backend/app/services/: ai_analyzer.py  email_processor.py  email_receiver.py  summary_generator.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  TestTailwind.tsx  index.css
frontend/src/components/homepage/: ContentCard.tsx  MasonryGrid.tsx
frontend/src/components/layout/: ModernNavbar.tsx  ModernSidebar.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/newspaper/: CategoryColumn.tsx  HeadlineCard.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  HomepageView.tsx  ModernDashboard.tsx  NewspaperView.tsx
frontend/src/stores/: useEmailStore.ts
