[tool.poetry]
name = "email-aggregator-backend"
version = "0.1.0"
description = "Smart Email Subscription Aggregation System Backend"
authors = ["Your Name <email@example.com>"]
readme = "README.md"
python = "^3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"